# MECApp

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.py
Test/: .gitignore  CMakeLists.txt  mieSolution.py  plotScatteredPower.py  sphere.msh  sphereMat.json
Test/src/: illumination.cpp  scatteredPower.cpp
inc/: complexConjVec.h  equivalentCurrent.h  facet.h  facets.h  farField.h  fresnel.h  gmshreader.h  materialProp.h  point.h  pointTemplateMembers.h  regionBoundary.h
src/: CMakeLists.txt  complexConjVec.cpp  facet.cpp  facets.cpp  farField.cpp  fresnel.cpp  gmshreader.cpp  point.cpp  regionBoundary.cpp
unittest/: CMakeLists.txt  alltest.cpp  facetstest.cpp  facettest.cpp  farFieldTest.cpp  fresneltest.cpp  squareMat.json  testgmsh.cpp  vec3test.cpp
